app_agent_pool: Fix AMI/CLI AgentLogoff soft preventing agents from logging back in.

* Clear the deferred_logoff flag when an agent logs in.

(closes issue ASTERISK-22669)
Reported by: John Bigelow


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@400754 65c4cc65-6c06-0410-ace0-fbb531ad65f3